k8s-resource-manifests/grafana/statefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: sodalite-services
spec:
  selector:
    matchLabels:
      app: grafana
  serviceName: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana:7.3.7
        name: grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
          - name: grafana-dashboards
            mountPath: "/etc/grafana/provisioning/dashboards"
          - name: provisioning
            mountPath: "/etc/grafana/provisioning"
      volumes:
      - name: provisioning
        configMap:
          name: grafana-registry
          items:
            - key: datasources
              path: datasources/datasources.yaml
            - key: dashboards
              path: dashboards/dashboards.yaml
  volumeClaimTemplates:
  - metadata:
      name: grafana-dashboards
      namespace: sodalite-services
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 1Gi
